refactor: encapsulated inside function for display

--- a/prj.conf
+++ b/prj.conf
@@ -24,4 +24,5 @@ CONFIG_LV_FONT_MONTSERRAT_14=y
 CONFIG_LOG=y
 CONFIG_DISPLAY_LOG_LEVEL_DBG=y # Useful for debugging display issues
 CONFIG_DISPLAY_LOG_LEVEL_ERR=y
+CONFIG_I2C_LOG_LEVEL_DBG=y
 CONFIG_LV_USE_LOG=y # Useful for debugging LVGL issues
