--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,11 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(zephyr-display-lvgl)
 
-target_sources(app PRIVATE src/main.c)
+target_include_directories(app PRIVATE 
+    ${CMAKE_CURRENT_SOURCE_DIR}/src
+)
+
+target_sources(app PRIVATE 
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/display.c
+)
