succss extracting overlay for esp23sr

--- a/prj.conf
+++ b/prj.conf
@@ -1,28 +1,19 @@
-# Heap and stacks
-CONFIG_INIT_STACKS=y
+# prj.conf
 
-# Needed for display and LVGL (prevent stack overflow and crash)
-CONFIG_MAIN_STACK_SIZE=4096
-
-# Enable display driver (SSD1306)
+# Use LVGL + SSD1306
 CONFIG_DISPLAY=y
+CONFIG_LVGL=y
 CONFIG_SSD1306=y
 
-# Configure LVGL
-CONFIG_LVGL=y
-CONFIG_LV_Z_BITS_PER_PIXEL=1
-CONFIG_LV_Z_MEM_POOL_SIZE=8192
+# I2C/TWIM0 (nrfx) only
+CONFIG_I2C=y
+CONFIG_I2C_NRFX=y
+CONFIG_NRFX_TWIM0=y
 
-# Enable LVGL widgets
-CONFIG_LV_USE_LABEL=y
-# CONFIG_LV_USE_LINE=y
-
-# Enable LVGL fonts
-CONFIG_LV_FONT_MONTSERRAT_14=y
-
-# Consider these if you run into issues or need logging:
+# Logging
 CONFIG_LOG=y
-CONFIG_DISPLAY_LOG_LEVEL_DBG=y # Useful for debugging display issues
-CONFIG_DISPLAY_LOG_LEVEL_ERR=y
-CONFIG_I2C_LOG_LEVEL_DBG=y
-CONFIG_LV_USE_LOG=y # Useful for debugging LVGL issues
+CONFIG_LV_USE_LOG=y
+CONFIG_DISPLAY_LOG_LEVEL_DBG=y
+
+# Pin control
+CONFIG_PINCTRL=y
