extracting conf from nrf to prj.conf

--- a/boards/nrf5340dk_nrf5340_cpuapp.conf
+++ b/boards/nrf5340dk_nrf5340_cpuapp.conf
@@ -1,34 +1,11 @@
-# nRF5340DK Application Core Configuration
+# nRF5340DK-specific Configuration
 
-# LVGL Configuration
-CONFIG_LVGL=y
-# CONFIG_LVGL_USE_LOG=y
-CONFIG_LV_Z_MEM_POOL_SIZE=32768
-CONFIG_LV_COLOR_DEPTH_1=y
-CONFIG_LV_USE_LABEL=y
-# CONFIG_LV_USE_OBJ=y  # Replaces LV_USE_CONT in newer LVGL versions
-CONFIG_LV_FONT_MONTSERRAT_8=y
-
-# Display Configuration
-CONFIG_DISPLAY=y
-CONFIG_SSD1306=y
-CONFIG_SSD1306_DEFAULT_CONTRAST=128
-# CONFIG_SSD1306_INVERTED=y  # Correct symbol for reverse mode
-
-# I2C Configuration (matches your overlay)
-CONFIG_I2C=y
+# I2C Controller (matches overlay)
 CONFIG_I2C_NRFX=y
-CONFIG_NRFX_TWIM1=y  # Must match your overlay which uses I2C1
+CONFIG_NRFX_TWIM1=y  # Critical for I2C1 in overlay
 
-# Logging Configuration
-CONFIG_LOG=y
-CONFIG_DISPLAY_LOG_LEVEL_DBG=y
-CONFIG_I2C_LOG_LEVEL_DBG=y
-
-# Memory Configuration
-CONFIG_MAIN_STACK_SIZE=4096
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
-CONFIG_HEAP_MEM_POOL_SIZE=16384
-
-# Disable conflicting peripherals
+# Disable conflicting peripheral
 CONFIG_NRFX_TWIM0=n
+
+# Optional board-specific tweaks
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
