--- a/prj.conf
+++ b/prj.conf
@@ -1,19 +1,27 @@
-# prj.conf
+# Common Application Configuration
 
-# Use LVGL + SSD1306
+# Display
 CONFIG_DISPLAY=y
-CONFIG_LVGL=y
 CONFIG_SSD1306=y
+CONFIG_SSD1306_DEFAULT_CONTRAST=128
 
-# I2C/TWIM0 (nrfx) only
+# LVGL
+CONFIG_LVGL=y
+CONFIG_LV_USE_LOG=y
+CONFIG_LV_COLOR_DEPTH_1=y
+CONFIG_LV_USE_LABEL=y
+CONFIG_LV_FONT_MONTSERRAT_8=y
+CONFIG_LV_Z_MEM_POOL_SIZE=16384
+
+# I2C
 CONFIG_I2C=y
-CONFIG_I2C_NRFX=y
-CONFIG_NRFX_TWIM0=y
 
 # Logging
 CONFIG_LOG=y
-CONFIG_LV_USE_LOG=y
 CONFIG_DISPLAY_LOG_LEVEL_DBG=y
+CONFIG_I2C_LOG_LEVEL_DBG=y
 
-# Pin control
+# System
 CONFIG_PINCTRL=y
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_HEAP_MEM_POOL_SIZE=8192
