reduced esp32s3 conf to bare minimal

--- a/boards/esp32s3_devkitc.conf
+++ b/boards/esp32s3_devkitc.conf
@@ -1,16 +1,10 @@
-# ESP32-S3 DevKitC specific configuration
+# ESP32-S3 Specific Configuration
 
-# Stack sizes
-CONFIG_MAIN_STACK_SIZE=4096
+# I2C Controller
+CONFIG_I2C_ESP32=y
 
-# Display driver
-CONFIG_SSD1306=y
+# Additional ESP32-specific display options if needed
+# CONFIG_SSD1306_REFRESH_PERIOD=100
 
-# I2C configuration
-CONFIG_I2C=y
-CONFIG_PINCTRL=y
-
-# Debug logging levels
-CONFIG_DISPLAY_LOG_LEVEL_DBG=y
-CONFIG_DISPLAY_LOG_LEVEL_ERR=y
-CONFIG_I2C_LOG_LEVEL_DBG=y
+# ESP32-specific power management
+# CONFIG_PM_DEVICE=y
