--- a/prj.conf
+++ b/prj.conf
@@ -16,10 +16,23 @@ CONFIG_LV_Z_MEM_POOL_SIZE=16384
 # I2C
 CONFIG_I2C=y
 
+# IMU
+CONFIG_MPU6050=y
+CONFIG_SENSOR=y
+CONFIG_MPU6050_TRIGGER_NONE=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
+
 # Logging
 CONFIG_LOG=y
-CONFIG_DISPLAY_LOG_LEVEL_DBG=y
+CONFIG_LOG_MODE_MINIMAL=y
+CONFIG_LOG_PRINTK=y
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_LOG_BUFFER_SIZE=1024
+
+# Logging Level
 CONFIG_I2C_LOG_LEVEL_DBG=y
+CONFIG_DISPLAY_LOG_LEVEL_DBG=y
+CONFIG_SENSOR_LOG_LEVEL_DBG=y
 
 # System
 CONFIG_PINCTRL=y
