--- a/prj.conf
+++ b/prj.conf
@@ -22,16 +22,18 @@ CONFIG_SENSOR=y
 CONFIG_MPU6050_TRIGGER_NONE=y
 CONFIG_CBPRINTF_FP_SUPPORT=y
 
-# Logging
+# Logging System
 CONFIG_LOG=y
-CONFIG_LOG_MODE_MINIMAL=y
-CONFIG_LOG_PRINTK=y
+CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_LOG_BUFFER_SIZE=2048
 CONFIG_LOG_BACKEND_UART=y
-CONFIG_LOG_BUFFER_SIZE=1024
+CONFIG_LOG_PROCESS_THREAD=y
+CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
 
-# Logging Level
-CONFIG_I2C_LOG_LEVEL_DBG=y
-CONFIG_DISPLAY_LOG_LEVEL_DBG=y
+# Log Levels
+CONFIG_LOG_DEFAULT_LEVEL=3 
+CONFIG_I2C_LOG_LEVEL_WRN=y
+CONFIG_DISPLAY_LOG_LEVEL_INF=y
 CONFIG_SENSOR_LOG_LEVEL_DBG=y
 
 # System
