fix: added more to prj.conf & dts overlay

--- a/prj.conf
+++ b/prj.conf
@@ -3,24 +3,31 @@
 # Display
 CONFIG_DISPLAY=y
 CONFIG_SSD1306=y
-CONFIG_SSD1306_DEFAULT_CONTRAST=128
 
 # LVGL
 CONFIG_LVGL=y
 CONFIG_LV_USE_LOG=y
-CONFIG_LV_COLOR_DEPTH_1=y
 CONFIG_LV_USE_LABEL=y
+CONFIG_LV_USE_CANVAS=y
+
+CONFIG_LV_DPI_DEF=148
+CONFIG_LV_Z_BITS_PER_PIXEL=1
+CONFIG_LV_COLOR_DEPTH_1=y
 CONFIG_LV_FONT_MONTSERRAT_8=y
+
+# CONFIG_LV_Z_MEM_POOL_NUMBER_BLOCKS=y
 CONFIG_LV_Z_MEM_POOL_SIZE=16384
+
+# CONFIG_LV_MEM_CUSTOM=y
 
 # I2C
 CONFIG_I2C=y
 
 # IMU
-CONFIG_MPU6050=y
-CONFIG_SENSOR=y
-CONFIG_MPU6050_TRIGGER_NONE=y
-CONFIG_CBPRINTF_FP_SUPPORT=y
+# CONFIG_MPU6050=y
+# CONFIG_SENSOR=y
+# CONFIG_MPU6050_TRIGGER_NONE=y
+# CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # Logging System
 CONFIG_LOG=y
