--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,10 @@ target_include_directories(app PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
-FILE(GLOB app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
+# FILE(GLOB app_sources ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
+FILE(GLOB app_sources 
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/imu.c
+    # ${CMAKE_CURRENT_SOURCE_DIR}/src/display.c
+)
 target_sources(app PRIVATE ${app_sources})
