--- a/prj.conf
+++ b/prj.conf
@@ -1,33 +1,39 @@
 # Common Application Configuration
 
+# System
+CONFIG_PINCTRL=y
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_HEAP_MEM_POOL_SIZE=8192
+
 # Display
-CONFIG_DISPLAY=y
-CONFIG_SSD1306=y
+# CONFIG_DISPLAY=y
+# CONFIG_SSD1306=y
 
 # LVGL
-CONFIG_LVGL=y
-CONFIG_LV_USE_LOG=y
-CONFIG_LV_USE_LABEL=y
-CONFIG_LV_USE_CANVAS=y
+# CONFIG_LVGL=y
+# CONFIG_LV_USE_LOG=y
+# CONFIG_LV_CONF_MINIMAL=y
+# CONFIG_LV_USE_LABEL=y
+# CONFIG_LV_USE_CANVAS=y
+# CONFIG_LV_LABEL_TEXT_SELECTION=y
+# CONFIG_LV_LABEL_LONG_TXT_HINT=y
+# CONFIG_LV_USE_LINE=y
 
-CONFIG_LV_DPI_DEF=148
-CONFIG_LV_Z_BITS_PER_PIXEL=1
-CONFIG_LV_COLOR_DEPTH_1=y
-CONFIG_LV_FONT_MONTSERRAT_8=y
+# CONFIG_LV_DPI_DEF=148
+# CONFIG_LV_Z_BITS_PER_PIXEL=1
+# CONFIG_LV_COLOR_DEPTH_1=y
+# CONFIG_LV_FONT_MONTSERRAT_14=y
 
-# CONFIG_LV_Z_MEM_POOL_NUMBER_BLOCKS=y
-CONFIG_LV_Z_MEM_POOL_SIZE=16384
-
-# CONFIG_LV_MEM_CUSTOM=y
+# CONFIG_LV_Z_MEM_POOL_SIZE=16384
 
 # I2C
 CONFIG_I2C=y
 
 # IMU
-# CONFIG_MPU6050=y
-# CONFIG_SENSOR=y
-# CONFIG_MPU6050_TRIGGER_NONE=y
-# CONFIG_CBPRINTF_FP_SUPPORT=y
+CONFIG_SENSOR=y
+CONFIG_MPU6050=y
+CONFIG_MPU6050_TRIGGER_NONE=y
+CONFIG_CBPRINTF_FP_SUPPORT=y
 
 # Logging System
 CONFIG_LOG=y
@@ -40,10 +46,5 @@ CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=1024
 # Log Levels
 CONFIG_LOG_DEFAULT_LEVEL=3 
 CONFIG_I2C_LOG_LEVEL_DBG=y
-CONFIG_DISPLAY_LOG_LEVEL_INF=y
+# CONFIG_DISPLAY_LOG_LEVEL_INF=y
 CONFIG_SENSOR_LOG_LEVEL_DBG=y
-
-# System
-CONFIG_PINCTRL=y
-CONFIG_MAIN_STACK_SIZE=4096
-CONFIG_HEAP_MEM_POOL_SIZE=8192
