--- a/boards/nrf5340dk_nrf5340_cpuapp.conf
+++ b/boards/nrf5340dk_nrf5340_cpuapp.conf
@@ -2,10 +2,10 @@
 
 # I2C Controller (matches overlay)
 CONFIG_I2C_NRFX=y
-CONFIG_NRFX_TWIM1=y  # Critical for I2C1 in overlay
+# CONFIG_NRFX_TWIM1=y  # Critical for I2C1 in overlay
 
 # Disable conflicting peripheral
-CONFIG_NRFX_TWIM0=n
+# CONFIG_NRFX_TWIM0=n
 
 # Optional board-specific tweaks
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
