--- a/prj.conf
+++ b/prj.conf
@@ -6,25 +6,25 @@ CONFIG_MAIN_STACK_SIZE=4096
 CONFIG_HEAP_MEM_POOL_SIZE=8192
 
 # Display
-# CONFIG_DISPLAY=y
-# CONFIG_SSD1306=y
+CONFIG_DISPLAY=y
+CONFIG_SSD1306=y
 
 # LVGL
-# CONFIG_LVGL=y
-# CONFIG_LV_USE_LOG=y
-# CONFIG_LV_CONF_MINIMAL=y
-# CONFIG_LV_USE_LABEL=y
-# CONFIG_LV_USE_CANVAS=y
-# CONFIG_LV_LABEL_TEXT_SELECTION=y
-# CONFIG_LV_LABEL_LONG_TXT_HINT=y
-# CONFIG_LV_USE_LINE=y
+CONFIG_LVGL=y
+CONFIG_LV_USE_LOG=y
+CONFIG_LV_CONF_MINIMAL=y
+CONFIG_LV_USE_LABEL=y
+CONFIG_LV_USE_CANVAS=y
+CONFIG_LV_LABEL_TEXT_SELECTION=y
+CONFIG_LV_LABEL_LONG_TXT_HINT=y
+CONFIG_LV_USE_LINE=y
 
-# CONFIG_LV_DPI_DEF=148
-# CONFIG_LV_Z_BITS_PER_PIXEL=1
-# CONFIG_LV_COLOR_DEPTH_1=y
-# CONFIG_LV_FONT_MONTSERRAT_14=y
+CONFIG_LV_DPI_DEF=148
+CONFIG_LV_Z_BITS_PER_PIXEL=1
+CONFIG_LV_COLOR_DEPTH_1=y
+CONFIG_LV_FONT_MONTSERRAT_14=y
 
-# CONFIG_LV_Z_MEM_POOL_SIZE=16384
+CONFIG_LV_Z_MEM_POOL_SIZE=16384
 
 # I2C
 CONFIG_I2C=y
